--- a/deployment.yml
+++ b/deployment.yml
@@ -1,3 +1,13 @@
 # Deployments  Recreate
 apiVersion: apps/v1
 kind: Deployment
+metadata:
+  name: nginx-deployment
+spec:
+  replicas: 2
+  strategy:
+    type: Recreate
+  selector:
+    matchLabels:
+      app: nginx
+  
