--- a/deployment.yml
+++ b/deployment.yml
@@ -10,4 +10,14 @@ spec:
   selector:
     matchLabels:
       app: nginx
-  
+  template:
+    metadata:
+      name: nginx-pod
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx-container
+        image: nginx:1.7.9
+        ports:
+        - containerPort: 80
