--- a/deploy(rolling).yml
+++ b/deploy(rolling).yml
@@ -10,4 +10,8 @@ spec:
     rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
+  minReadySeconds: 30   
+  selector:
+    matchLabels:
+      app: nginx
   
