--- a/NodePort-svc.yaml
+++ b/NodePort-svc.yaml
@@ -29,3 +29,6 @@ spec:
   ports:
   - port: 80
     targetPort: 8761
+    NodePort: 30001
+    
+ # The range of NodePort in Kubernetes Cluster must be in 30000 - 32767
