--- a/service-multicontainerpod.yaml
+++ b/service-multicontainerpod.yaml
@@ -17,4 +17,23 @@ spec:
     image: lokeshnagam121/javaproject
     ports:
     - containerPort: 8761
+---
+# NodePort Service with 2 ports for 2 containers
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: testsvc
+  namespace: test-ns
+spec:
+  type: NodePort
+  selector:
+    app: testapp
+  ports:
+  - port: 8080
+    targetPort: 8080
+    name: nginx
+  - port: 8761
+    targetPort: 8761
+    name: javaapp
 
