--- a/nfsstorageclass.yml
+++ b/nfsstorageclass.yml
@@ -13,7 +13,7 @@ rules:
   - apiGroups: [""] # rules on persistentvolumes
     resources: ["persistentvolumes"]
     verbs: ["get", "list", "watch", "create", "delete"]
-  - apiGroups: [""]
+  - apiGroups: [""] # rules on persistentvolumes
     resources: ["persistentvolumeclaims"]
     verbs: ["get", "list", "watch", "update"]
   - apiGroups: ["storage.k8s.io"]
@@ -104,7 +104,7 @@ kind: StorageClass
 metadata:
   name: nfs-storageclass # IMPORTANT pvc needs to mention this name
   annotations:
-    storageclass.kubernetes.io/is-default-class: "true"
+    storageclass.kubernetes.io/is-default-class: "true" # setting up as default storage class
 provisioner: nfs-provisioner # name can be anything
 parameters:
   archiveOnDelete: "false"
