--- a/NodePort_Service.yaml
+++ b/NodePort_Service.yaml
@@ -1,1 +1,14 @@
 # Node Port Service
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    name: springboot
+  name: springboot
+spec:
+  type: NodePort
+  ports:
+    - port: 8080
+      targetPort: 8080
+  selector:
+    name: springboot
